# m3_b6

./: README.md  compose.yaml  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py  exceptions.py  prompts.py
app/infrastructure/: tools.py
app/observability/: logging.py  pii.py  tracing.py
app/prompts/: __init__.py  bugs_database.json  tool_search_bugs_description.txt
app/routers/: chat.py  health.py  models.py
app/schemas/: chat.py  models.py
app/services/: llm.py
eval/: check_thresholds.py  golden_dataset.json  run_evaluation.py  thresholds.yaml
tests/unit/: test_llm_core.py
